--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello from file html </h1>
+    <h1>Hello from file html.</h1>
    <a herf =""><button >login</button></a>
 
 </body>
